implement mia complainer

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
     <div id="mainContainer">
-        <div>
-            <p id="firstParagraph"> This is an example of container. Feel free to add or remove anything!</p>
+        <div id="mia_container">
+            <img id="mia_img" src="/images/mia.png" alt="miathecat">
+            <div id="mia_msg">Click Mia!</div>
         </div>
 
     </div>
