--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div id="mainContainer">
         <div id="mia_container">
-            <img id="mia_img" src="/images/mia.png" alt="miathecat">
+            <img id="mia_img" src="images/mia.png" alt="miathecat">
             <div id="mia_msg">Click Mia!</div>
         </div>
 
