--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
     <div id="mainContainer">
-        <div id="mia_container">
-            <img id="mia_img" src="images/mia.png" alt="miathecat">
-            <div id="mia_msg">Click Mia!</div>
+        <div id="emmet_container">
+            <div id="emmet_msg">Click Emmet for something awesome!</div>
+            <img id="emmet_img" src="images/emmet_Brickowski.jpeg" alt="emmetbrickowski">
         </div>
 
     </div>
